fixed momii 'userId'

--- a/swagger/v1/momii/playing.yml
+++ b/swagger/v1/momii/playing.yml
@@ -17,7 +17,7 @@ tags:
       description: "y position"
       required: true
       type: "number"
-    - name: "userId"
+    - name: "userID"
       in: "formData"
       description: "USER ID"
       required: true
