Upgrade Node.js versions for server

--- a/package.json
+++ b/package.json
@@ -51,6 +51,9 @@
     ]
   },
   "now": {
-    "alias": "ireversi-server.now.sh"
+    "alias": "ireversi-server.now.sh",
+    "engines": {
+      "node": ">=10"
+    }
   }
 }
