--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,6 +65,14 @@ jobs:
       - run: now -t ${NOW_TOKEN} alias
       - run: now -t ${NOW_TOKEN} scale ireversi-server.now.sh 1
 
+  deploy:
+    working_directory: ~/repo
+
+    steps:
+      - run: sudo apt-get update
+      - run: sudo apt-get install -y awscli
+      - run: aws deploy create-deployment --application-name $AWS_APP_NAME --deployment-group-name $AWS_GROUP_NAME --github-location repository="$CIRCLE_PROJECT_REPONAME",commitId="$CIRCLE_SHA1"
+
 workflows:
   version: 2
   test_and_staging:
@@ -76,3 +84,9 @@ workflows:
           filters:
             branches:
               only: develop
+      - deploy:
+          requires:
+            - test
+          filters:
+            branches:
+              only: master
