--- a/appspec.yml
+++ b/appspec.yml
@@ -3,6 +3,12 @@ os: linux
 files:
   - source: /
     destination: /home/ec2-user/ireversi
+permissions:
+  - object: /
+    pattern: "**"
+    owner: ec2-user
+    group: ec2-user
 hooks:
   ValidateService:
     - location: deploy.sh
+      runas: ec2-user
