--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -72,8 +72,7 @@ jobs:
     working_directory: ~/repo
 
     steps:
-      - run: sudo apt-get update
-      - run: sudo apt-get install -y awscli
+      - run: sudo pip install awscli
       - run: aws deploy create-deployment --application-name $AWS_APP_NAME --deployment-group-name $AWS_GROUP_NAME --github-location repository="$CIRCLE_PROJECT_REPONAME",commitId="$CIRCLE_SHA1"
 
 workflows:
